---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/src_importing_dev"
---
error: App importing dev module
  ┌─ src/one.gleam:6:1
  │
6 │ import two
  │ ^ Imported here

The application module `one` is importing the development module `two`.

Development modules are not included in production builds so application
modules cannot import them. Perhaps move the `two` module to the src
directory.
